--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="cn.kkk.usury.MainActivity">
+        <activity android:name="cn.kkk.usury.view.MainActivity">
+        </activity>
+        <activity android:name="cn.kkk.usury.view.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
