--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,8 @@ dependencies {
 
     compile 'com.android.support:cardview-v7:25.0.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.squareup.okhttp3:okhttp:3.4.0'
+    compile 'com.squareup.okio:okio:1.1.0'
+    compile 'com.google.code.gson:gson:2.7'
 
 }
